--- a/prijateli_tree/app/languages/sq.json
+++ b/prijateli_tree/app/languages/sq.json
@@ -29,7 +29,10 @@
     },
     "different_game_intro": {
       "different_version": "Tani do t\u00eb luajm\u00eb nj\u00eb version tjet\u00ebr t\u00eb loj\u00ebs",
-      "instead_of": "N\u00eb vend q\u00eb t'ju caktojm\u00eb n\u00eb m\u00ebnyr\u00eb t\u00eb rast\u00ebsishme bashk\u00ebmoshatar\u00ebt q\u00eb v\u00ebzhgoni, ne do t'ju lejojm\u00eb t\u00eb zgjidhni lojtar\u00ebt q\u00eb v\u00ebzhgoni."
+      "each_circle": "\u00c7do rreth \u00ebsht\u00eb nj\u00eb lojtar: ju jeni rrethi i gjelb\u00ebr.",
+      "instead_of": "N\u00eb vend q\u00eb t'ju caktojm\u00eb n\u00eb m\u00ebnyr\u00eb t\u00eb rast\u00ebsishme bashk\u00ebmoshatar\u00ebt q\u00eb v\u00ebzhgoni, ne do t'ju lejojm\u00eb t\u00eb zgjidhni lojtar\u00ebt q\u00eb v\u00ebzhgoni.",
+      "players_connected": "Lojtar\u00ebt e lidhur me nj\u00eb linj\u00eb mund t\u00eb shohin supozimet e nj\u00ebri-tjetrit.",
+      "this_diagram": "Ky diagram tregon se kush cilin mund t\u00eb shoh\u00eb n\u00eb k\u00ebt\u00eb loj\u00eb."
     },
     "final_score": {
       "ask_your_teachers": "Pyetni m\u00ebsimdh\u00ebn\u00ebsin tuaj p\u00ebr marrjen e shp\u00ebrblimit tuaj!",
