--- a/prijateli_tree/app/languages/tr.json
+++ b/prijateli_tree/app/languages/tr.json
@@ -1,27 +1,27 @@
 {
   "tr": {
     "admin_panel": {
-      "copy_to_clipboard": "missing",
-      "copy_url": "missing",
-      "create_session": "missing",
-      "email": "missing",
-      "facilitator_password": "missing",
-      "facilitator_username": "missing",
-      "facilitators": "missing",
-      "firstname": "missing",
-      "for_admin_only": "missing",
-      "lastname": "missing",
-      "login": "missing",
-      "logout": "missing",
-      "new_session": "missing",
-      "number_of_games": "missing",
-      "players": "missing",
-      "school": "missing",
-      "session_and_game_created": "missing",
-      "session_created": "missing",
-      "student_language": "missing",
-      "student_name": "missing",
-      "success": "missing"
+      "copy_to_clipboard": "Panoya kopyala",
+      "copy_url": "URL'yi kopyalay\u0131n",
+      "create_session": "Bir oturum olu\u015fturmaya veya kullan\u0131c\u0131 eklemeye \u00e7al\u0131\u015fan bir Y\u00f6neticiyseniz l\u00fctfen \u015fu ba\u011flant\u0131ya t\u0131klay\u0131n:",
+      "email": "E-posta",
+      "facilitator_password": "Fasilitat\u00f6r \u015fifresi",
+      "facilitator_username": "Fasilitat\u00f6r kullan\u0131c\u0131 ad\u0131",
+      "facilitators": "Yaln\u0131zca Fasilitat\u00f6r i\u00e7in!",
+      "firstname": "\u0130sim",
+      "for_admin_only": "Belirli bir oyuna girmeye \u00e7al\u0131\u015f\u0131rsan\u0131z l\u00fctfen oyun koordinat\u00f6r\u00fcn\u00fczle ileti\u015fime ge\u00e7in.",
+      "lastname": "Soyisim",
+      "login": "Giri\u015f yap\u0131n",
+      "logout": "Kilidini a\u00e7",
+      "new_session": "Yeni sezon",
+      "number_of_games": "Oyun numaras\u0131",
+      "players": "Oyuncular",
+      "school": "Okul",
+      "session_and_game_created": "Oturumunuz (ID: {Y}) ve ilk oyununuz (ID: {X}) olu\u015fturuldu!",
+      "session_created": "Oturumunuz (ID: {Y}) olu\u015fturuldu!",
+      "student_language": "\u00d6\u011frencinin dili",
+      "student_name": "\u0130sim ve soyisim",
+      "success": "Ba\u015far\u0131:"
     },
     "different_game_choices": {
       "now_you_can_observe": "Art\u0131k bu oyunda ilerleyen turlarda g\u00f6zlemleyece\u011finiz oyuncular\u0131 se\u00e7ebilirsiniz.",
@@ -38,25 +38,25 @@
       "ask_your_teachers": "\u00d6\u011fretmenlerinize \u00f6d\u00fcl\u00fcn\u00fcz\u00fc nas\u0131l alaca\u011f\u0131n\u0131z\u0131 sorun!",
       "congratulations": "Tebrikler!",
       "denars": "{X} dinar!",
-      "you_guessed_correctly": "{X} oyunda do\u011fru tahmin ettiniz ve {x} puan kazand\u0131n\u0131z, bu da ekstra kazand\u0131\u011f\u0131n\u0131z anlam\u0131na geliyors."
+      "you_guessed_correctly": "{X} oyunda do\u011fru tahmin ettiniz ve {x} puan kazand\u0131n\u0131z, anlam\u0131na geliyors."
     },
     "game": {
       "guess_color": "Torban\u0131n rengini tahmin edin:",
       "see_what_others_guessed": "Son turda di\u011fer baz\u0131 oyuncular\u0131n neler tahmin etti\u011fini g\u00f6r\u00fcn:",
       "the_computer_chose": "Bilgisayar bir torba se\u00e7ti ve toplar\u0131 her oyuncuya rastgele b\u00f6l\u00fc\u015ft\u00fcrd\u00fc.",
-      "your_ball": "missing",
-      "your_information": "missing",
-      "your_previous_guess": "missing"
+      "your_ball": "Senin topun:",
+      "your_information": "Bilgisayar \u015funu sunar:",
+      "your_previous_guess": "\u00d6nceki tahmininiz"
     },
     "game_results": {
       "better_luck": "Bir dahaki sefere iyi \u015fanslar!",
-      "the_computer_chose": "missing",
+      "the_computer_chose": "Bilgisayar \u015funu se\u00e7ti:",
       "you_won": "Kazand\u0131n! ",
-      "your_guess": "missing"
+      "your_guess": "Son tahmininiz"
     },
     "header": {
-      "official_game": "missing",
-      "practice": "missing",
+      "official_game": "resmi oyun",
+      "practice": "egzersiz oyunu",
       "round": "Yuvarlak",
       "score": "Skor"
     },
@@ -67,8 +67,8 @@
     "ready_to_play": {
       "get_ready": "K\u0131rm\u0131z\u0131 m\u0131 Mavi mi oynamaya haz\u0131r olun!",
       "im_ready": "Ben haz\u0131rm!",
-      "select_student": "missing",
-      "welcome": "missing"
+      "select_student": "Bu bankta oturacak \u00f6\u011frencinin ad\u0131n\u0131 se\u00e7in.",
+      "welcome": "Ho\u015fgeldiniz!"
     },
     "real_game_intro": {
       "added_points": "Son \u00f6d\u00fcl\u00fcn\u00fcze {X} puan eklenecek.",
